@@ -2,6 +2,7 @@ ImageViewer Release Notes
 Author: Steve Corbett
 
 Version 2.2 [TODO] - Maintenance release
+  #35 - Allow extensions to supply image set toolbar buttons
   #34 - Standardize icons across the app+extensions
   #33 - Thorough javadoc pass
   #32 - Allow extensions to change current image tab
